--- a/index.html
+++ b/index.html
@@ -1,38 +1,52 @@
 <html>
+
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
-    <h1>yo soy el andre</h1>
-    <img class="fit-picture"
-     src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-     alt="Logo de google">
-    <nav>
-      <a href="/home">Home</a>
-      <a href="/products">Products</a>
-      <a href="/contact">Contact</a></nav>
-  </header>
-  <main>
-    <h1>bien venido</h1>
-    <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices enim vel luctus porttitor.</p>
-    <p class="intro">Aenean a facilisis tellus. Pellentesque tempus odio ut nibh dapibus, sit amet laoreet odio blandit.</p>
-    <h2>que nos queda aprender hoy?</h2>
-    <ul id="una-lista">
-      <li>What is a <a html="">HTML attribute?</a></li>
-      <li>Linking CSS file</li>
-      <li>CSS Selectors</li>
-      <li>CSS Properties</li>
-      <li>Cascade vs Specificity</li>
-      <li>Box Model</li>
-    </ul>
-    <h3 id="behance">
-      <a href="https://www.behance.net/adreanacn">Behance</a>
-    </h3>
-    <p>outro pagrafro</p>
-  </main>
-  <footer>
-    <p>copyleft 2020 :-)</p>
-  </footer>
+    <h1>Hola me mandaron hacer esta tarea GRACIAS MIGRACODE</h1>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, magni. Molestiae eaque vel quis
+      necessitatibus libero? Quisquam eos eveniet iure, sequi nemo sit suscipit, tempore illo cum magnam dolores facere.
+    </p>
+
+    <main>
+      <h3>Nombre del arículo</h3>
+      <div id="nuemero1">
+        <article>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In culpa aspernatur quas repellat
+          delectus quia animi. Similique molestias cumque officia quaerat officiis nostrum? Doloribus
+          explicabo asperiores fugit eaque quibusdam veritatis?</p>
+        </article>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur nisi voluptates
+        itaque excepturi,
+        ex necessitatibus sint facilis veniam,
+        molestias, sapiente odio? Officia voluptatum odit praesentium ipsum,
+        nam consectetur natus rerum?</p>
+
+        <h4>Hola te quiero mucho</h4>
+        <div id="numero2">
+          <article>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur 
+              adipisicing elit. Vero autem dignissimos porro, odit cum 
+              eius dolorum debitis praesentium obcaecati a eligendi voluptatum? 
+              Praesentium atque nobis accusantium nesciunt cupiditate modi illo?
+            </p>
+          </article>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium odio libero provident, 
+          alias, ducimus et explicabo mollitia eaque quam,ç
+           quos perferendis dolorum nam id facere consequuntur ratione ad distinctio natus.</p>
+      <h3 id="behance">
+   
+    </main>
+    <footer>
+      <hr>
+      <p>copyleft 2020 :-)</p>
+    </footer>
 </body>
+
 </html>
