--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <h3>Nombre del arículo</h3>
       <div id="nuemero1">
         <article>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In culpa aspernatur quas repellat
+        
+          <img style="width: 300px; height: 200;" src="Screenshot from 2020-07-28 18-22-29.png">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In culpa aspernatur quas repellat
           delectus quia animi. Similique molestias cumque officia quaerat officiis nostrum? Doloribus
           explicabo asperiores fugit eaque quibusdam veritatis?</p>
         </article>
@@ -29,6 +31,7 @@
         <h4>Hola te quiero mucho</h4>
         <div id="numero2">
           <article>
+            <img style="width: 300px; height: 200;" src="Screenshot from 2020-07-28 18-22-29.png">
             <p>
               Lorem ipsum, dolor sit amet consectetur 
               adipisicing elit. Vero autem dignissimos porro, odit cum 
