--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
-
+  
 <body>
-  <header>
+    <main>
     <h1>Hola me mandaron hacer esta tarea GRACIAS MIGRACODE</h1>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, magni. Molestiae eaque vel quis
       necessitatibus libero? Quisquam eos eveniet iure, sequi nemo sit suscipit, tempore illo cum magnam dolores facere.
